--- a/.github/workflows/codeguru.yml
+++ b/.github/workflows/codeguru.yml
@@ -25,14 +25,14 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::353838458998:role/CodeGuruSecurityGitHubAccessRole
-          aws-region: us-west-2
+          aws-region: us-east-1
           role-session-name: GitHubActionScript
 
       - name: CodeGuru Security
         uses: aws-actions/codeguru-security@v1
         with:
           source_path: .
-          aws_region: us-west-2
+          aws_region: us-east-1
           fail_on_severity: Critical
       - name: Print findings
         run: |
